refactor: update import paths for FractalModule and enhance code organization